--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -175,3 +175,11 @@
     margin-top:-30px;
     border:0px solid red;
 }
+
+.nav-link.pe-3{
+    color:black !important;
+}
+
+.nav-link.pe-3:hover{
+    color:#3874ff !important;
+}
