--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -4,7 +4,7 @@
 }
 
 .nav-link-text{
-    color:#B8BABF !important;
+    color:#87898f !important;
     font-size:14px !important;
     margin-left:10px !important;
 }
@@ -21,12 +21,14 @@
     color:#B8BABF !important;
 }
 
-.navbar-vertical-label-under{
-    color:#B8BABF !important;
+#p2{
+    color:#87898f !important;
     font-size:12px;
-    margin-left:32px;
+    margin-left:0px;
     margin-top:-8px;
+    text-transform: capitalize;
 }
+
 
 .form-control.search-input.search{
     /*border-radius:30px !important;*/
@@ -258,10 +260,11 @@
     font-size:12px;
 }
 
-navbar-vertical-collapsed span1{
-
+.collapsedspan{
+width:0px !important;
+height:0px !important;
+font-size:0px !important;
 }
-
 
 
 @media (max-width:990px){
