--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -230,7 +230,7 @@
 #span4{
     float:left;
     border:0px solid red;
-    color:#848B9D;
+    color:black;
     width:100%;
     text-align:center;
     margin-left:0px;
@@ -241,7 +241,7 @@
 #span5{
     float:left;
     border:0px solid red;
-    color:#848B9D;
+    color:black;
     text-align:center;
     font-weight:600;
     width:100%;
@@ -249,11 +249,11 @@
     font-size:12px;
 }
 
-#span6{
+#span6a{
     float:left;
     width:100%;
     border:0px solid green;
-    color:#848B9D;
+    color:black;
     text-align:center;
     font-weight:600;
     margin-left:0px;
