--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -4,8 +4,8 @@
 }
 
 .nav-link-text{
-    color:#87898f !important;
-    font-size:14px !important;
+    color:#63666e !important;
+    font-size:13px !important;
     margin-left:10px !important;
 }
 
@@ -22,7 +22,7 @@
 }
 
 #p2{
-    color:#87898f !important;
+    color:#63666e !important;
     font-size:12px;
     margin-left:0px;
     margin-top:-8px;
