--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -161,7 +161,31 @@
 }
 
 #otropciones{
+    border:0px solid red;
+    height:570px;
     margin-top:50px;
+}
+
+.flex-1{
+    color:black !important;
+}
+
+.flex-1:hover{
+color:#3874ff !important;
+}
+
+.nav-icons{
+font-size:18px !important;
+}
+
+.nav.flex-column.border-top.fs--1.vertical-nav.mb-4 li a{
+border:0px solid red !important;
+height:34px;
+}
+
+.nav.flex-column.border-top.fs--1.vertical-nav.mb-4 li a:hover{
+background-color:#DCE0E6;
+border-radius:7px;
 }
 
 .d-flex.align-items-center span{
@@ -212,8 +236,8 @@ border-bottom:0px solid black !important;
 
 .form-control.search-input.fuzzy-search.rounded-pill.form-control-sm{
     /*background-color:#0F111A;*/
-    /*border: 1px solid #373E53;
-    border-radius:30px !important;*/
+    border: 1px solid #373E53;
+    border-radius:30px !important;
 }
 
 #span6a{
