--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -22,10 +22,11 @@
 }
 
 #p2{
-    color:#63666e !important;
-    font-size:12px;
+    color:#525B75 !important;
+    font-size:14px;
     margin-left:0px;
     margin-top:-8px;
+    font-weight:600;
     text-transform: capitalize;
 }
 
@@ -167,7 +168,7 @@
 }
 
 .flex-1{
-    color:black !important;
+    color:grey !important;
 }
 
 .flex-1:hover{
