--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -75,7 +75,7 @@
 #usermenu{
     float:left;
     border:0px solid red;
-    height:170px;
+    height:180px;
     width:100%;
     margin-bottom:0px;
 }
@@ -237,7 +237,7 @@
 
 .form-control.search-input.fuzzy-search.rounded-pill.form-control-sm{
     background-color:#0F111A;
-   border: 1px solid #373E53;
+    border: 1px solid #373E53;
     border-radius:30px !important;
 }
 
@@ -327,6 +327,11 @@
 
 .navbar-vertical-content{
     background-color:#111827;
+}
+
+.alert{
+    padding-top:15px;
+    height:55px;
 }
 
 
