--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -30,7 +30,6 @@
     text-transform: capitalize;
 }
 
-
 .form-control.search-input.search{
     /*border-radius:30px !important;*/
 }
@@ -40,9 +39,9 @@
 }
 
 .navbar-vertical-footer{
-    background-color:#1E283D !important;
+    /*background-color:#1E283D !important;
     color:white;
-    border-top:1px solid #373E53 !important;
+    border-top:1px solid #373E53 !important;*/
 }
 
 .btn.p-0.border.border-200.btn-support-chat{
@@ -119,7 +118,7 @@
 }
 
 .navbar.navbar-vertical.navbar-expand-lg{
-    background-color:#111827 !important;
+    /*background-color:#111827 !important;*/
 }
 
 .collapse.navbar-collapse div ul li div #span1{
@@ -215,16 +214,14 @@
     color:#3874ff !important;
 }*/
 
-
-
 #navbarDefault{
-    /*border-bottom:0px solid black !important;*/
+    border-top:4px solid #F48225 !important;
+    /*border-bottom:0px solid #3B4045;*/
 }
 
-
 .navbar.navbar-top.fixed-top.navbar-expand{
-    background-color:#111827 !important;
-    border:0px solid;
+    /*background-color:#111827 !important;
+    border:0px solid black;*/
 }
 
 .logo-text.ms-2.d-none.d-sm-block{
@@ -236,9 +233,9 @@
 }
 
 .form-control.search-input.fuzzy-search.rounded-pill.form-control-sm{
-    background-color:#0F111A;
+    /*background-color:#0F111A;
     border: 1px solid #373E53;
-    border-radius:30px !important;
+    border-radius:30px !important;*/
 }
 
 #span6a{
@@ -301,7 +298,6 @@
     width:54px !important;
 }
 
-
 @media (max-width:990px){
     #span1{
         width:0px;
@@ -326,12 +322,55 @@
 }
 
 .navbar-vertical-content{
-    background-color:#111827;
+    /*background-color:#111827;*/
 }
 
 .alert{
     padding-top:15px;
     height:55px;
 }
+
+#topdiv{
+    float:left;
+    border:1px solid red;
+    height:10px;
+    width:100%;
+}
+
+#nombreFichaTrab{
+    font-size:20px;
+}
+
+/* width */
+.navbar-vertical-content::-webkit-scrollbar {
+  width: 8px !important;
+}
+
+/* Track */
+.navbar-vertical-content::-webkit-scrollbar-track {
+  /*box-shadow: inset 0 0 5px grey;*/
+  background-color:#CCCCCC;
+  margin-top:8px;
+  margin-bottom:3px;
+  border-radius: 30px !important;
+}
+
+/* Handle */
+.navbar-vertical-content::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.navbar-vertical-content::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
+
+.nav-link:hover{
+background-color:#F1F2F3 !important;
+border-radius:0px !important;
+border-right:3px solid #F48225 !important;
+}
+
 
 
