alguos ajustes de lentitud en impresiones sql dao, formulario de actualizacion de datos laborales

--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -216,6 +216,7 @@
 
 #navbarDefault{
     border-top:4px solid #F48225 !important;
+    height:10px !important;
     /*border-bottom:0px solid #3B4045;*/
 }
 
@@ -367,9 +368,9 @@
 }
 
 .nav-link:hover{
-background-color:#F1F2F3 !important;
-border-radius:0px !important;
-border-right:3px solid #F48225 !important;
+/*background-color:#F1F2F3 !important;
+border-radius:0px !important;*/
+/*border-right:3px solid #F48225 !important;*/
 }
 
 
