--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -215,14 +215,14 @@
 }*/
 
 #navbarDefault{
-    border-top:4px solid #F48225 !important;
+    /*border-top:4px solid #F48225 !important;*/
     height:10px !important;
-    /*border-bottom:0px solid #3B4045;*/
+    /*border-bottom:1px solid #3B4045;*/
 }
 
 .navbar.navbar-top.fixed-top.navbar-expand{
-    background-color:#111827 !important;
-    border:0px solid black;
+    /*background-color:#111827 !important;
+    border:0px solid black;*/
 }
 
 .logo-text.ms-2.d-none.d-sm-block{
@@ -341,31 +341,26 @@
 #nombreFichaTrab{
     font-size:20px;
 }
-
-/* width */
+/*
 .navbar-vertical-content::-webkit-scrollbar {
   width: 8px !important;
 }
-
-/* Track */
+/
 .navbar-vertical-content::-webkit-scrollbar-track {
-  /*box-shadow: inset 0 0 5px grey;*/
   background-color:#CCCCCC;
   margin-top:8px;
   margin-bottom:3px;
   border-radius: 30px !important;
 }
 
-/* Handle */
 .navbar-vertical-content::-webkit-scrollbar-thumb {
   background: red;
   border-radius: 10px;
 }
 
-/* Handle on hover */
 .navbar-vertical-content::-webkit-scrollbar-thumb:hover {
   background: #b30000;
-}
+}*/
 
 .nav-link:hover{
 /*background-color:#F1F2F3 !important;
