correciones modificacion a tabla small en todas las opciones, algunas correciones de fechas e insercion

--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -390,5 +390,10 @@ border-radius:0px !important;*/
 font-size:11px;
 }
 
+/*#customer-order-table-body tr td{
+height:5px !important;
+border:1px solid red;
+}*/
+
 
 
