--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -232,7 +232,7 @@
 }*/
 
 #navbarDefault{
-    border-top:4px solid #648CE4 !important;
+    border-top:4px solid #3874FF !important;
     height:10px !important;
     border-bottom:1px solid #3B4045;
 }
