--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -408,5 +408,11 @@ margin-left:-40px;
 height:90%;
 }
 
+#imgcompanyTbl{
+border:0px solid grey;
+border-radius:100px;
+margin-bottom:20px;
+}
+
 
 
