--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -339,8 +339,9 @@
     }
 
     #imgcompany{
-        margin-top:15px;
-        margin-left:110px !important;
+        margin-top:-30px;
+        margin-bottom:10px;
+        margin-left:120px !important;
         border:0px solid red !important;
     }
 
@@ -349,17 +350,31 @@
         font-size:10px !important;
     }
 
+    .modal-footer button{
+        margin-bottom:6px !important;
+    }
+
+    .modal-header h5{
+        font-size:16px !important;
+    }
+
+    .alert{
+       padding-top:5px !important;
+       padding-bottom:5px !important;
+       height:auto !important;
+    }
+}
+
+.alert{
+    padding-top:5px;
+    padding-bottom:5px;
+    height:auto;
+    color:white;
+    font-size:12px;
 }
 
 .navbar-vertical-content{
     background-color:#111827;
-}
-
-.alert{
-    padding-top:10px;
-    height:53px;
-    color:white;
-    font-size:14px;
 }
 
 #topdiv{
