--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -366,11 +366,14 @@
 }
 
 .alert{
-    padding-top:5px;
-    padding-bottom:5px;
+    padding-top:17px;
+    padding-bottom:17px;
     height:auto;
     color:white;
-    font-size:12px;
+    font-size:14px;
+    border-radius:0px;
+    /*font-weight:bold;*/
+    border:0px solid grey;
 }
 
 .navbar-vertical-content{
