Dashboard Listas Cumpleaños, Ingresantes y retirados

--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -397,6 +397,10 @@
     /*border:0px solid grey;*/
 }
 
+.alert div p a{
+    text-decoration:underline;
+}
+
 .navbar-vertical-content{
     background-color:#111827;
 }
