Self-Service detalle

--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -401,6 +401,10 @@
     text-decoration:underline;
 }
 
+.alert p a{
+    text-decoration:underline;
+}
+
 .navbar-vertical-content{
     background-color:#111827;
 }
