--- a/src/main/webapp/resources/assets/css/stylesgladius.css
+++ b/src/main/webapp/resources/assets/css/stylesgladius.css
@@ -214,7 +214,7 @@
 }
 
 #imgcompany{
-    margin-top:-35px;
+    margin-top:-25px;
     margin-left:-100px;
     border:1px solid #D9D9D9 !important;
 }
@@ -384,6 +384,10 @@
                 margin:0 !important;
                 margin-bottom:15px !important;
             }
+}
+
+.card-body div h4{
+    font-size:12px !important;
 }
 
 .modal-header h5{
